--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <header class="header">
+      <div class="logo-wrapper">
+        <img src="./chef.png" class="logo" type="png" alt="A chef hat" />
+        <h3>Hambal</h3>
+      </div>
       <nav class="nav">
         <ul>
           <li>
