add fonts and css style into headers and contents

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <header class="header">
       <div class="logo-wrapper">
         <img src="./chef.png" class="logo" type="png" alt="A chef hat" />
-        <h3>Hambal</h3>
+        <h3 class="headerlogo-text">Hambal</h3>
       </div>
       <nav class="nav">
         <ul>
@@ -27,6 +27,8 @@
         </ul>
       </nav>
     </header>
-    <div id="content"></div>
+    <div class="content-wrapper">
+      <div id="content" class="content"></div>
+    </div>
   </body>
 </html>
