--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Page</title>
+    <link rel="icon" href="./chef-logo.png" alt="Chef hat logo" type="png" />
   </head>
   <body>
     <header class="header">
